<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_dark"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SearchActivity" >

    <TextView
        android:id="@+id/TextView01"
        style="@style/Style_TextWithShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_to_search"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edt_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        style="@style/Style_TextWithShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/optional_select_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_search"
        style="@style/Style_TextWithShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/btn_blue_selector"
        android:text="@string/menu_search" />


</LinearLayout>